package fr.unice.polytech.cf;

public class BackOfficeSystem extends CookieOnDemandSystem {}
